--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,15 +4,14 @@ publish docker image:
     refs:
       - master
   script:
-    - docker build -t colisweb/scala-sbt-gke:adoptopenjdk-11.0.3-slim-9.2.8.0 .
-    - docker push colisweb/scala-sbt-gke:adoptopenjdk-11.0.3-slim-9.2.8.0
-
+    - docker build -t $IMAGE_NAME .
+    - docker push $IMAGE_NAME
   services:
     - docker:dind
   variables:
     DOCKER_HOST: tcp://docker:2375
+    IMAGE_NAME: colisweb/scala-sbt-gke:adoptopenjdk-11.0.5-slim-9.2.8.0
   before_script:
     - apk add bash gnupg
     - bash -c 'gpg --import  <(echo "$GITLAB_PGP_PRIVATE_KEY")'
     - bash -c "source <(gpg -q --decrypt docker_login.sh.secret)"
-
